fix about modal on mobile and ticket visual on safari

--- a/components/mobile-menu.module.css
+++ b/components/mobile-menu.module.css
@@ -26,6 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transform: translateZ(100px);
   /* transition: all 1s; */
 }
 
